# alkahest

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  alkahest.exe.vmp  build.rs  cargo-appimage.desktop  composite.hlsl  error.hlsl  externs.rs  extract_activity_names.py  final.hlsl  fullscreen.hlsl  fullscreen.shader  imgui.ini  renderver.txt  rustfmt.toml  scopes.txt  shadertoolsconfig.json  stuff.md  vert_ribbons.glsl  vshader.shader
crates/alkahest/: Cargo.toml  build.rs
crates/alkahest-data/: Cargo.toml
crates/alkahest-data/src/: activity.rs  buffers.rs  common.rs  decorator.rs  dxgi.rs  entity.rs  geometry.rs  lib.rs  map.rs  occlusion.rs  render_globals.rs  sound.rs  statics.rs  tag.rs  technique.rs  text.rs  texture.rs  tfx.rs  unknown.rs
crates/alkahest-panic-handler/: Cargo.toml
crates/alkahest-panic-handler/src/: lib.rs
crates/alkahest-pm/: Cargo.toml
crates/alkahest-pm/src/: lib.rs
crates/alkahest-renderer/: Cargo.toml  build.rs
crates/alkahest-renderer/assets/shaders/: cubemap.hlsl
crates/alkahest-renderer/src/: handle.rs  input.rs  lib.rs  renderer.rs  resources.rs
crates/alkahest-renderer/src/camera/: fps.rs  mod.rs  projection.rs  tween.rs  viewport.rs
crates/alkahest-renderer/src/ecs/: audio.rs  channels.rs  common.rs  components.rs  culling.rs  decorators.rs  dynamic_geometry.rs  havok.rs  hierarchy.rs  light.rs  map.rs  mod.rs  resources.rs  route.rs  scene_ext.rs  static_geometry.rs  tags.rs  terrain.rs  transform.rs  utility.rs  visibility.rs
crates/alkahest-renderer/src/gpu/: adapter.rs  buffer.rs  d3dstate.rs  debug.rs  global_state.rs  mod.rs  texture.rs  util.rs
crates/alkahest-renderer/src/loaders/: index_buffer.rs  map.rs  map_tmp.rs  mod.rs  technique.rs  texture.rs  vertex_buffer.rs
crates/alkahest-renderer/src/postprocess/: mod.rs  ssao.rs
crates/alkahest-renderer/src/renderer/: cubemaps.rs  gbuffer.rs  immediate.rs  lighting_pass.rs  mod.rs  opaque_pass.rs  pickbuffer.rs  postprocess.rs  shader.rs  shadows.rs  systems.rs  transparents_pass.rs  util.rs
crates/alkahest-renderer/src/shader/: matcap.rs  mod.rs  shader_ball.rs
crates/alkahest-renderer/src/tfx/: channels.rs  externs.rs  gbuffer.rs  globals.rs  mod.rs  scope.rs  technique.rs  view.rs
crates/alkahest-renderer/src/util/: black_magic.rs  color.rs  d3d.rs  image.rs  math.rs  mod.rs  packages.rs  scene.rs  text.rs
crates/alkahest-renderer/tools/: README.md
crates/alkahest-test/: Cargo.toml
crates/alkahest-test/src/: lib.rs  maps.rs
crates/alkahest/assets/icons/: alkahest-prebl.xcf  alkahest.xcf  havok_full.xcf  wwise.xcf
crates/alkahest/assets/shaders/: composite.hlsl  cubemap.hlsl  debug_line.hlsl  outline.hlsl
crates/alkahest/lib/: iron.lib
crates/alkahest/src/: app.rs  config.rs  discord.rs  dxbc.rs  game_selector.rs  input.rs  main.rs  maplist.rs  packages.rs  paths.rs  resources.rs  technique.rs  updater.rs
crates/alkahest/src/data/: text.rs
crates/alkahest/src/ecs/: component_panels.rs  resources.rs
crates/alkahest/src/gui/: activity_select.rs  big_button.rs  bottom_bar.rs  chip.rs  commands.rs  configuration.rs  console.rs  context.rs  crosshair.rs  fps_display.rs  gizmo.rs  hotkeys.rs  input.rs  inspector.rs  load_indicator.rs  mod.rs  node_gizmos.rs  outliner.rs  profiler.rs  sodi.rs  tfx.rs  updater.rs  util.rs
crates/alkahest/src/overlays/: activity_select.rs  camera_settings.rs  console.rs  gui.rs  inspector.rs  menu.rs  outliner.rs  technique_viewer.rs
crates/alkahest/src/render/: cbuffer.rs  data.rs  drawcall.rs  overrides.rs  static_instanced.rs  static_render.rs
crates/alkahest/src/util/: action.rs  consts.rs  dds.rs  export.rs  image.rs  iron.rs  mod.rs  text.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  convar.rs  job.rs  lib.rs  panic_hook.rs
crates/d2tools/: .gitignore  Cargo.toml  README.md
crates/data/: Cargo.toml  hash.rs  lib.rs  map.rs  pattern.rs  strings.rs  tag.rs  umbra.rs  wwise.rs
crates/data/activity/: mod.rs  transition.rs
crates/data/examples/: sequence.rs  transitions.rs
crates/data/tfx/: atmosphere.rs  buffers.rs  common.rs  enums.rs  mod.rs  render_globals.rs  scope.rs  technique.rs  texture.rs
crates/data/tfx/features/: ao.rs  cubemap.rs  decals.rs  decorators.rs  dynamic.rs  light.rs  mod.rs  road_decals.rs  sky_objects.rs  statics.rs  terrain.rs
crates/data/tfx/sequencer/: mod.rs
crates/destiny-havok/: .gitignore  Cargo.toml
crates/destiny-havok/bindings/: Cargo.toml
crates/destiny-havok/bindings/HavokToObj/: .gitignore  DestinyHavok.cs  HavokToObj.csproj  HavokToObj.sln  Program.cs
crates/destiny-havok/bindings/src/: array.rs  lib.rs
crates/destiny-havok/examples/: info.rs  shapetest.rs
crates/destiny-havok/src/: index.rs  lib.rs  section.rs  shape_collection.rs
crates/destiny-havok/src/types/: bvtree.rs  compound_shape.rs  convex_vertices.rs  mod.rs  unknown.rs
crates/egui-directx11/: Cargo.toml
crates/egui-directx11/examples/: directx11-sample.rs
crates/egui-directx11/src/: backup.rs  lib.rs  mesh.rs  painter.rs  texture.rs
crates/egui-directx11/src/shader/: mod.rs
crates/quicktag/: .gitignore  Cargo.toml  README.md  quicktag.xcf  quicktag_full.xcf
crates/quicktag/src/: cache.rs  main.rs  packages.rs  references.rs  scanner.rs  tagtypes.rs  text.rs  util.rs
crates/quicktag/src/gui/: common.rs  dxgi.rs  mod.rs  named_tags.rs  packages.rs  raw_strings.rs  strings.rs  tag.rs  texture.rs
crates/render/: Cargo.toml
crates/render/builtin/fonts/: consolas.json
crates/render/builtin/gpu/: blend_states.txt  (+3 more)
crates/render/src/: asset.rs  camera.rs  gpu.rs  lib.rs  object.rs  renderer.rs
crates/rrise/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  gen_doc.bat  gen_doc.sh
crates/rrise/.cargo/: config.toml
crates/rrise/c/: ak.h
crates/rrise/src/: bindings.rs  bindings_static_plugins.rs  communication.rs  error.rs  game_syncs.rs  memory_mgr.rs  music_engine.rs  query_params.rs  rrise.rs  settings.rs  sound_engine.rs  spatial_audio.rs  stream_mgr.rs  transform.rs
crates/rrise/tests/: one_frame_render.rs  static_link_all.rs
(+607 files in other folders)
