[workspace]
resolver = "2"
members = [
    "crates/alkahest",
    "crates/alkahest-data",
    "crates/alkahest-panic-handler",
    "crates/alkahest-pm",
    "crates/alkahest-renderer",
    "crates/d2tools",
    "crates/destiny-havok",
    "crates/egui-directx11",
]

[workspace.dependencies]
arc-swap = { version = "1.7.1", features = ["weak"] }
anyhow = { version = "1.0.71" }
binrw = "0.13.3"
bitflags = "2.5.0"
bytemuck = "1.7.0"
crossbeam = "0.8.4"
destiny-pkg = "0.10"
egui = { version = "0.27", features = ["persistence"] }
egui_extras = "0.27.2"
field_access = "0.1.6"
glam = { version = "0.27", features = ["bytemuck", "mint"] }
hecs = "0.10.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
parking_lot = "0.12.1"
png = "0.17.13"
profiling = { version = "1.0.15", features = ["profile-with-puffin"] }
raw-window-handle = "0.6.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.25"
smallvec = { version = "1.13.2", features = ["const_new"] }
thiserror = "1"
tiger-parse = { version = "0.1.8", git = "https://github.com/v4nguard/tiger-parse", features = [
    "check_types",
    "check_types_strict",
    "destiny_pkg",
    "check_types_debug",
] }
tracing = "0.1.37"
windows = { version = "0.56.0", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_UI_WindowsAndMessaging",
    "implement",
] }
winit = { version = "0.29" }


[profile.dev.package.destiny-pkg]
opt-level = 3

[profile.dev]
# opt-level = 3
# cohae: Overflow checks are nice for some, but not for us
overflow-checks = false
