[package]
name = "alkahest-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alkahest-pm = { path = "../alkahest-pm" }
binrw.workspace = true
destiny-pkg.workspace = true
glam.workspace = true
tiger-parse.workspace = true
nohash-hasher = "0.2.0"
