[package]
name = "alkahest-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alkahest-pm = { path = "../alkahest-pm" }
binrw = "0.13.3"
destiny-pkg = "0.9.9"
glam = { version = "0.27" }
tiger-parse = { version = "0.1.5", git = "https://github.com/v4nguard/tiger-parse", features = [
    "check_types",
    "destiny_pkg",
    "check_types_debug",
] }

nohash-hasher = "0.2.0"
