[package]
name = "alkahest-panic-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
fs-err = "2.11.0"
lazy_static = "1.4.0"
native-dialog = "0.7.0"
parking_lot = "0.12.1"
regex = "1.10.3"
