[package]
name = "alkahest-panic-handler"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
breakpad-handler = "0.2.0"
color-eyre = "0.6.2"
fs-err = "2.11.0"
lazy_static.workspace = true
native-dialog = "0.7.0"
parking_lot.workspace = true
regex = "1.10.3"
