[package]
name = "alkahest-renderer"
version = "0.5.0"
edition = "2021"

[dependencies]
alkahest-data = { path = "../alkahest-data" }
alkahest-pm = { path = "../alkahest-pm" }
destiny-havok = { path = "../destiny-havok" }

anyhow.workspace = true
arc-swap.workspace = true
binrw = "0.13.3" # TODO(cohae): Remove this once we have custom parsing for TfxBytecodeOp
bitflags.workspace = true
bytemuck.workspace = true
crossbeam.workspace = true
destiny-pkg.workspace = true
ecolor.workspace = true
field_access.workspace = true
genmesh = "0.6.2"
glam.workspace = true
hecs.workspace = true
heck.workspace = true
indexmap = "2.2.6"
itertools.workspace = true
lazy_static.workspace = true
num.workspace = true
obj = "0.10.2"
parking_lot.workspace = true
png.workspace = true
profiling.workspace = true
raw-window-handle.workspace = true
rustc-hash.workspace = true
serde.workspace = true
smallvec.workspace = true
tiger-parse.workspace = true
tracing.workspace = true
windows.workspace = true
winit.workspace = true
strum = { version = "0.26.2", features = ["derive"] }
hex = "0.4.3"
fastrand = "2.1.0"

[build-dependencies]
glob = "0.3.1"
windows.workspace = true
