[package]
name = "alkahest"
version = "0.5.4"
rust-version = "1.79"
edition = "2021"
authors = ["cohaereo <cohaereo@protonmail.com>"]
default-run = "alkahest"

[dependencies]
alkahest-data = { path = "../alkahest-data" }
alkahest-panic-handler = { path = "../alkahest-panic-handler" }
alkahest-pm = { path = "../alkahest-pm" }
alkahest-renderer = { path = "../alkahest-renderer" }
destiny-havok = { path = "../destiny-havok" }

# (De)serialization
binrw.workspace = true
tiger-pkg.workspace = true
ron = "0.8.1"
serde_yaml.workspace = true
serde.workspace = true
tiger-parse.workspace = true

# Graphics/GUI
egui.workspace = true
egui_extras.workspace = true
egui-directx11 = { path = "../egui-directx11" }
egui-winit = "0.31.0"
glam.workspace = true
raw-window-handle.workspace = true
transform-gizmo-egui = { git = "https://github.com/cohaereo/transform-gizmo" }
windows.workspace = true
winit.workspace = true

# Parallelism
crossbeam = "0.8.2"
lazy_static.workspace = true
parking_lot.workspace = true
poll-promise = { version = "0.3.0", features = ["tokio"] }
rayon.workspace = true
ringbuffer = "0.15"
tokio = { version = "1.32.0", features = ["rt", "macros"] }

# Misc
anyhow.workspace = true
bevy_ecs.workspace = true
bevy_tasks.workspace = true
build-time = "0.1.3"
bytemuck.workspace = true
clap = { version = "4.4.4", features = ["derive"] }
directories = "5.0.1"
field_access.workspace = true
fs-err = "2.11.0"
game-detector = "0.2.1"
gilrs = "0.10.9"
hex = "0.4.3"
indexmap = "2.2.6"
itertools.workspace = true
native-dialog = "0.7.0"
once_cell = "1.19.0"
paste = "1.0.14"
profiling.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
strum = { version = "0.26.1", features = ["derive"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing.workspace = true
#tracing-tracy = "0.11.0"
#tracy-client = "0.17.0"
discord-sdk = "0.3.6"

[features]
default = ["discord_rpc"]
discord_rpc = []
profiler = []
# Disable sorting the map list
keep_map_order = []
deadlock_detection = ["parking_lot/deadlock_detection"]

debug_lock = []

[package.metadata.imgui-dx11-renderer]
targets = ["x86_64-pc-windows-gnu"]

[package.metadata.alkahest]
targets = ["x86_64-pc-windows-gnu"]

[build-dependencies]
rustc_version = "0.4.0"
winres = "0.1.12"
