[package]
name = "alkahest-core"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
breakpad-handler = { version = "0.2.0", optional = true }
color-eyre = { version = "0.6.5", optional = true }
game-detector = { version = "0.2.2" }
lazy_static = "1"
native-dialog = { version = "0.7.0", optional = true }
parking_lot.workspace = true
potassium.workspace = true
regex = "1.12.2"
serde.workspace = true
tiger-pkg.workspace = true
toml = "0.8"
tracing.workspace = true

[features]
default = ["panic-hook"]
panic-hook = ["breakpad-handler", "color-eyre", "native-dialog"]
