[package]
name = "d2tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "randomsound-to-sboxsound"
path = "src/bin/randomsound-to-sboxsound.rs"

[dependencies]
# General
anyhow = "1.0.75"
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.11.3"
itertools = "0.12.1"
log = "0.4.20"

# (de)serialization
alkahest-data = { path = "../alkahest-data" }
alkahest-pm = { path = "../alkahest-pm" }
destiny-pkg = { version = "0.9.7", features = ["bincode"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
tiger-parse = { version = "0.1.3", git = "https://github.com/v4nguard/tiger-parse", features = [
    "check_types",
    "destiny_pkg",
    "check_types_debug",
] }
vgmstream = { git = "https://github.com/cohaereo/vgmstream-rs/", version = "0.1.2" }
wav = "1.0.0"
fs-err = "2.11.0"
