[package]
name = "d2tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "randomsound-to-sboxsound"
path = "src/bin/randomsound-to-sboxsound.rs"

[dependencies]
# General
anyhow.workspace = true
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.11.3"
itertools.workspace = true
log = "0.4.20"

# (de)serialization
alkahest-data = { path = "../alkahest-data" }
alkahest-pm = { path = "../alkahest-pm" }
destiny-pkg.workspace = true
serde.workspace = true
serde_json.workspace = true
tiger-parse.workspace = true
vgmstream = { git = "https://github.com/cohaereo/vgmstream-rs/", version = "0.1.2" }
wav = "1.0.0"
fs-err = "2.11.0"
