[package]
name = "alkahest-data"
version = "0.0.0"
edition = "2021"

[lib]
path = "./lib.rs"

[dependencies]
alkahest-core = { path = "../core" }

anyhow.workspace = true
assert-offset = "0.1"
bitflags = "2"
d3d11.workspace = true
glam.workspace = true
paste = "1"
tiger-pkg.workspace = true
tiger-parse.workspace = true
int-enum = "1.2.0"
