[package]
name = "alkahest-data"
version = "0.0.0"
edition = "2021"

[lib]
path = "./lib.rs"

[dependencies]
alkahest-core = { path = "../core" }

ahash.workspace = true
anyhow.workspace = true
assert-offset = "0.1"
bitflags = "2"
bytemuck.workspace = true
d3d11.workspace = true
glam.workspace = true
int-enum = "1.2.0"
paste = "1"
rayon.workspace = true
tiger-parse.workspace = true
tiger-pkg.workspace = true
chroma-dbg = "0.2.1"
