[package]
name = "destiny-havok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
binrw = "0.13.3"
bitflags = "2.4.1"
glam = "0.25"
parry3d = "0.13.5"

[dev-dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
chull = "0.2"
colored = "2.0.4"
