[package]
name = "destiny-havok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
binrw.workspace = true
bitflags = "2.4.1"
glam.workspace = true
parry3d = "0.13.5"

[dev-dependencies]
anyhow.workspace = true
itertools.workspace = true
chull = "0.2"
colored = "2.0.4"
