[package]
name = "quicktag"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.11", features = ["derive"] }
destiny-pkg = { git = "https://github.com/v4nguard/destiny-pkg", version = "0.6.2" }
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts",
    "wayland",
    "x11",
    "persistence",
    "wgpu",
] }
env_logger = "0.10.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
nohash-hasher = "0.2.0"

# Parallelism
poll-promise = "0.3.0"
rayon = "1.8.0"

# Serialization
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
binrw = "0.12.0"
zstd = "0.13.0"
base64 = "0.21.4"
opener = "0.6.1"
egui-notify = "0.10.0"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
# debug = 1
