[package]
name = "rrise"
version = "0.2.3"
edition = "2021"
authors = ["David Taralla <davidtaralla@gmail.com> & Contributors to the Rrise project"]
description = "A rust binding for Wwise"
repository = "https://github.com/dtaralla/rrise"
documentation = "https://dtaralla.github.io/rrise/"
readme = "README.md"
keywords = ["library", "sound", "3D", "wwise"]
categories = ["multimedia", "game-development"]
license-file = "LICENSE"
exclude = [
    "/examples/WwiseProject/Originals",
    "/videos",
]

[dependencies]
alkahest-core = { path = "../core" }
tiger-pkg.workspace = true

cc = { version = "1.0.73", optional = true }
paste = "1.0.7"
log = "0.4.16"
ctrlc = { version = "3.2.1", optional = true }
simple_logger = { version = "2.1.0", optional = true }
lerp = { version = "0.4.0", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
# bevy = { version = "0.9.0", optional = true, default-features = false, features = ["render", "bevy_asset"] }
# rrise-headers = { version = "0.2", optional = true }

[build-dependencies]
bindgen = "0.72.1"
cc = { version = "1.0.73", features = ["parallel"] }
paste = "1.0.7"

[lib]
name = "rrise"
path = "src/rrise.rs"
crate-type = ["dylib", "rlib"]

[features]
default = ["AkVorbisDecoder", "AkOpusDecoder", "AkMeterFX"]
AkVorbisDecoder = []
AkOpusDecoder = ["AkOggOpusDecoder", "AkWemOpusDecoder"]
AkAudioInputSource = []
AkCompressorFX = []
AkDelayFX = []
AkExpanderFX = []
AkFlangerFX = []
AkGainFX = []
AkGuitarDistortionFX = []
AkHarmonizerFX = []
AkMatrixReverbFX = []
AkMeterFX = []
AkParametricEQFX = []
AkPeakLimiterFX = []
AkPitchShifterFX = []
AkRecorderFX = []
AkRoomVerbFX = []
AkSilenceSource = []
AkSineSource = []
AkStereoDelayFX = []
AkSynthOneSource = []
AkTimeStretchFX = []
AkToneSource = []
AkTremoloFX = []
# Internal features, don't enable independantly!
AkOggOpusDecoder = []
AkWemOpusDecoder = []
examples = ["ctrlc", "simple_logger", "lerp", "cc"]

[[test]]
name = "one_frame_render"

[[test]]
name = "static_link_all"
required-features = [
    "AkVorbisDecoder",
    "AkOpusDecoder",
    "AkAudioInputSource",
    "AkCompressorFX",
    "AkDelayFX",
    "AkExpanderFX",
    "AkFlangerFX",
    "AkGainFX",
    "AkGuitarDistortionFX",
    "AkHarmonizerFX",
    "AkMatrixReverbFX",
    "AkMeterFX",
    "AkParametricEQFX",
    "AkPeakLimiterFX",
    "AkPitchShifterFX",
    "AkRecorderFX",
    "AkRoomVerbFX",
    "AkSilenceSource",
    "AkSineSource",
    "AkStereoDelayFX",
    "AkSynthOneSource",
    "AkTimeStretchFX",
    "AkToneSource",
    "AkTremoloFX"
]
